...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Glucoaid-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="DAViewController" customModule="Diabetapp" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
...
                                <animations/>
                                <color key="backgroundColor" red="0.40000000000000002" green="0.63137254901960782" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="C4P-lB-Mrm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Add a new input">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="Q9o-gf-IJv" kind="showDetail" id="WqV-OH-HF5"/>
                                </connections>
                            </button>
...
                            <constraint firstAttribute="trailingMargin" secondItem="kDa-V6-3Yq" secondAttribute="trailing" constant="-19" id="s0p-Um-W78"/>
                            <constraint firstAttribute="trailingMargin" secondItem="hP8-cs-nMe" secondAttribute="trailing" id="sNf-Cs-UjV"/>
                            <constraint firstItem="6Dk-wb-Qnd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="21" id="wVL-d7-X2g"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Glucoaid" id="UQr-cw-Gwi">
                        <barButtonItem key="rightBarButtonItem" tag="1" title="Data" id="wdZ-mM-wHH">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                    <connections>
...
