//
//  DiabetappUITests.swift
//  DiabetappUITests
//
//  Created by Clarence Ji on 12/5/15.
//  Copyright © 2015 Diabetapp. All rights reserved.
//

import XCTest

class DiabetappUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        
        let app = XCUIApplication()
        let scrollViewsQuery = app.scrollViews
        let element = scrollViewsQuery.otherElements.containingType(.StaticText, identifier:"7:00").element
        element.tap()
        element.tap()
        element.tap()
        app.staticTexts["150"].tap()
        app.navigationBars["Diabetapp"].buttons["Data"].tap()
        app.buttons["Add a new input"].tap()
        scrollViewsQuery.otherElements.staticTexts["10:00"].tap()
        element.tap()
        
    }
    
}
